--- a/templates/local_settings.py.j2
+++ b/templates/local_settings.py.j2
@@ -1,16 +1,7 @@
-SITE_ROOT = "{{ hc__site_root }}"
+SITE_ROOT = "{{ hc__hostname }}:6863"
+PING_ENDPOINT = SITE_ROOT + '/ping'
 SITE_NAME = "{{ hc__site_name }}"
 DEFAULT_FROM_EMAIL = "{{ hc__email_from }}"
-
-DATABASES = {
-    'default': {
-        'ENGINE': 'django.db.backends.postgresql',
-        'NAME': '{{ hc__db_name }}',
-        'USER': '{{ hc__db_user }}',
-        'PASSWORD': '{{ hc__db_password }}',
-        'TEST': {'CHARSET': 'UTF8'}
-    }
-}
 
 EMAIL_HOST = "{{ hc__email_host }}"
 EMAIL_PORT = {{ hc__email_port }}
@@ -18,34 +9,16 @@ EMAIL_HOST_USER = "{{ hc__email_user }}"
 EMAIL_HOST_PASSWORD = "{{ hc__email_password }}"
 EMAIL_USE_TLS = True
 
-ALLOWED_HOSTS = ['app']
-DEBUG = False
-LOGGING = {
-    'version': 1,
-    'disable_existing_loggers': False,
-    'formatters': {
-        'verbose': {
-            'format' : "[%(asctime)s] %(levelname)s [%(name)s:%(lineno)s] %(message)s",
-            'datefmt' : "%d/%b/%Y %H:%M:%S"
-        },
-        'simple': {
-            'format': '%(levelname)s %(message)s'
-        },
-    },
-    'handlers': {
-        'console': {
-            'class': 'logging.StreamHandler',
-        },
-    },
-    'loggers': {
-        'django': {
-            'handlers':['console'],
-            'propagate': True,
-            'level': 'INFO',
-        },
-        'hc': {
-            'handlers': ['console'],
-            'level': 'INFO',
-        },
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.postgresql',
+        'HOST': 'db',
+        'NAME': '{{ hc__db_name }}',
+        'USER': '{{ hc__db_user }}',
+        'PASSWORD': '{{ hc__db_password }}',
+        'TEST': {'CHARSET': 'UTF8'}
     }
 }
+
+ALLOWED_HOSTS = ['*']
+DEBUG = False
