--- a/templates/local_settings.py.j2
+++ b/templates/local_settings.py.j2
@@ -1,5 +1,5 @@
 SITE_ROOT = "{{ hc__hostname }}:6863"
-PING_ENDPOINT = SITE_ROOT + '/ping'
+PING_ENDPOINT = SITE_ROOT + '/ping/'
 SITE_NAME = "{{ hc__site_name }}"
 DEFAULT_FROM_EMAIL = "{{ hc__email_from }}"
 
